examples/kubernetes/session-5/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: session-5
  labels:
    app.kubernetes.io/part-of: session-5
